--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "packages": [
     "packages/*"
   ],
-  "version": "independent"
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  },
+  "version": "0.0.0"
 }
