--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bootstrap": "lerna bootstrap --hoist",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "pre-release": "lerna version --conventional-commits",
-    "release": "lerna publish from-git"
+    "release": "lerna publish from-git",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
