--- a/packages/contract-function/package.json
+++ b/packages/contract-function/package.json
@@ -37,12 +37,12 @@
     "url": "https://github.com/hiddentao/react-hooks/issues"
   },
   "devDependencies": {
+    "@ethersproject/contracts": "^5.6.0",
+    "@usedapp/core": "^1.0.2",
     "typescript": "^4.6.3"
   },
   "gitHead": "d6094b98c5c3a1ebe81880eaace364859412dd81",
   "dependencies": {
-    "@ethersproject/contracts": "^5.6.0",
-    "@rjshooks/use-progress": "^0.2.0",
-    "@usedapp/core": "^1.0.0"
+    "@rjshooks/use-progress": "^0.2.0"
   }
 }
