--- a/packages/contract-function/package.json
+++ b/packages/contract-function/package.json
@@ -37,11 +37,11 @@
     "url": "https://github.com/hiddentao/react-hooks/issues"
   },
   "devDependencies": {
-    "@ethersproject/contracts": "^5.6.0",
+    "ethers": "^5.6.6",
     "@usedapp/core": "^1.0.2",
     "typescript": "^4.6.3"
   },
-  "gitHead": "d6094b98c5c3a1ebe81880eaace364859412dd81",
+  "gitHead": "d5204726be1ab8c402011ff0b2a4fc8bd91e50cd",
   "dependencies": {
     "@rjshooks/use-progress": "^0.2.4"
   }
