--- a/package.json
+++ b/package.json
@@ -80,11 +80,14 @@
     "@semantic-release/git": "^10.0.1",
     "@types/react": "^18.0.5",
     "husky": "^7.0.4",
-    "lerna": "^4.0.0",
     "react": "^18.0.0",
     "standard-version": "^9.3.2"
   },
   "peerDependencies": {
     "react": "^16.0.0"
-  }
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "engineStrict": true
 }
